<resources>
    <string name="app_name">런닝 에브리데이</string>
    <string name="home">홈</string>
    <string name="measure">기록 측정</string>
    <string name="record">나의 기록</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_distance">0.00</string>
    <string name="distance_1.5km">1.50 km</string>
    <string name="_00">00 : 00</string>
    <string name="running_everyday">Running Everyday</string>
    <string name="running_everytime">Running Everyday</string>
    <string name="pop">강수확률: %1s%%</string>
    <string name="temp">%1s℃</string>
    <string name="profile_name">%1s님 안녕하세요</string>
    <string name="plz_select_sex_text_view">① 성별을 골라주세요</string>
    <string name="man">남</string>
    <string name="woman">여</string>
    <string name="confirm">확인</string>
    <string name="streak">%1d일째 스트릭 기록중!</string>
    <string name="is_location_permission_granted">위치 권한 허용 및 \n\'정확한 위치 사용\' 여부 </string>
    <string name="is_gps_permission_granted">gps 활성화 여부</string>
    <string name="ranking">순위</string>
    <string name="measure_date">측정 날짜</string>
    <string name="measure_time">시간</string>
    <string name="grade">등급</string>
    <string name="top_10_measure">Top 10 기록</string>
    <string name="complete_target_distance">%1skm</string>
    <string name="record_num">%1d</string>
    <string name="_1_5_km">1.5 km &#160;-&#160;</string>
    <string name="_3_0_km">3.0 km &#160;-&#160;</string>
    <string name="setting">설정</string>
    <string name="sign_out">로그아웃</string>
    <string name="sex">성별</string>
    <string name="modify">수정하기</string>
    <string name="age">나이</string>
    <string name="account_withdrawal">계정 탈퇴</string>
    <string name="plz_input_information">정확한 기록 측정을 위한 초기 회원정보를 입력해주세요</string>
    <string name="plz_select_birth">② 출생년도를 골라주세요</string>
    <string name="measure_result">측정 결과</string>
    <string name="measure_distance">측정 거리</string>
    <string name="measure_result_time">걸린 시간</string>
    <string name="modify_birth">출생년도 수정하기</string>
    <string name="modify_sex">성별 수정하기</string>
    <string name="withdrawal">계정탈퇴</string>
    <string name="real_withdrawal_2">계정 탈퇴를 하면 복구가 불가능해요\n탈퇴를 원하면 아래에 \'계정탈퇴\'라고 적고 \'탈퇴하기\' 버튼을 눌러주세요</string>
    <string name="real_withdrawal">정말로 계정탈퇴 하시겠어요?</string>
    <string name="grade_standard">등급 기준</string>
    <string name="_1_5km">1.5km</string>
    <string name="_3_0km">3.0km</string>
    <string name="current_weather">현재 날씨</string>
    <string name="skip_today_running">오늘 운동 스킵</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="my_stats">나의 스탯</string>
    <string name="tilde">~</string>
    <string name="distance_to_be_measured">측정할 거리</string>
    <string name="current_distance_kor">현재 거리</string>
    <string name="slash">&#160;/&#160;</string>
    <string name="start_to_measure">측정 시작</string>
    <string name="stop_to_measure">측정 중단</string>
    <string name="go_to_set_location_permission">위치 권한 설정하러 가기</string>
    <string name="go_to_set_gps_permission">gps 키러 가기</string>
    <string name="measure_grade">%1s급</string>
    <string name="not_exist_stats">기록된 달리기가 없어요</string>
    <string name="go_to_measure">기록 측정하러 가기</string>
    <string name="my_career_high">나의 커리어하이</string>
</resources>