<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plz_input_information"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plz_select_sex_text_view"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <RadioGroup
        android:id="@+id/sex_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:checkedButton="@id/man_radio_button">

        <RadioButton
            android:id="@+id/man_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:layout_margin="10dp" />

        <RadioButton
            android:id="@+id/woman_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman"
            android:layout_margin="10dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plz_select_birth"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <NumberPicker
        android:layout_margin="10dp"
        android:id="@+id/year_of_birth_number_picker"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sex_confirm_button"
        android:layout_margin="10dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"/>
</LinearLayout>