<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/modify_sex"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/sex_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:checkedButton="@id/man_radio_button">

        <RadioButton
            android:id="@+id/man_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:layout_margin="10dp" />

        <RadioButton
            android:id="@+id/woman_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman"
            android:layout_margin="10dp"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/modify_sex_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>