<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MeasureFragment"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#4FC3F7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measure"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginStart="15sp"
            android:fontFamily="@font/omyu_pretty"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_to_be_measured"
                android:layout_marginEnd="15dp"
                android:textSize="24sp"
                android:fontFamily="@font/omyu_pretty"/>
            <Spinner
                android:id="@+id/distanceSpinner"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00"
            android:textSize="45sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center|top"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_distance_kor"
            android:layout_marginEnd="10dp"
            android:textSize="24sp"
            android:fontFamily="@font/omyu_pretty"/>

        <TextView
            android:id="@+id/current_distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_distance"
            android:textSize="24sp"
            android:fontFamily="@font/omyu_pretty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/max_distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_1.5km"
            android:textSize="24sp"
            android:fontFamily="@font/omyu_pretty"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center|top"
        android:background="#ffffff">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/measure_start_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_left_round"
            android:backgroundTint="#2196F3"
            android:text="@string/start_to_measure"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/measure_stop_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_right_round"
            android:backgroundTint="#C2C3C3"
            android:text="@string/stop_to_measure"/>

    </LinearLayout>

</LinearLayout>