<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/real_withdrawal"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_withdrawal_2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/withdrawal_edit_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/withdrawal"
        android:layout_gravity="center"
        android:autofillHints="no"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/withdrawal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"/>

</LinearLayout>