<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measure_result"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:fontFamily="@font/omyu_pretty"
        android:padding="20dp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/dismiss_measure_complete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_cancel_24_gray"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:contentDescription="@null" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/measure_distance"
           android:textSize="24sp"
           android:fontFamily="@font/omyu_pretty"
           android:gravity="center"/>

        <TextView
            android:id="@+id/measure_complete_target_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:fontFamily="@font/omyu_pretty"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/measure_result_time"
            android:textSize="24sp"
            android:fontFamily="@font/omyu_pretty"
            android:gravity="center"/>

        <TextView
            android:id="@+id/measure_complete_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:fontFamily="@font/omyu_pretty"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grade"
            android:textSize="24sp"
            android:fontFamily="@font/omyu_pretty"
            android:gravity="center"/>

        <TextView
            android:id="@+id/measure_complete_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:fontFamily="@font/omyu_pretty"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>