<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_margin="15dp"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_gravity="center"
            android:textSize="18sp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/setting_profile_image_view"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/setting_email_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/sign_out_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_out"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"/>
                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/setting_sex_image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/sex"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/setting_sex_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/sex"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/setting_sex_image_view"/>

                <TextView
                    android:id="@+id/sex_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/setting_sex_image_view"
                    android:layout_below="@id/setting_sex_text_view"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/modify_sex_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textColor="#2196F3"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/setting_age_image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/age"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/setting_age_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/age"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/setting_age_image_view"/>

                <TextView
                    android:id="@+id/age_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/setting_age_image_view"
                    android:layout_below="@id/setting_age_text_view"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/modify_age_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify"
                    android:layout_marginEnd="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="#2196F3"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <TextView
                android:id="@+id/account_withdrawal_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_withdrawal"
                android:textColor="#F44336"
                android:padding="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>